# rt

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh  run.sh
src/: main.cpp  math.h  ray.cpp  ray.h
